# ubiquitous-doodle

./: README.md  pyproject.toml
basketball_sim/: __init__.py  __main__.py
basketball_sim/ai/: __init__.py  coach_ai.py  defensive_ai.py  offensive_ai.py
basketball_sim/core/: __init__.py  engine.py  event_bus.py  grid.py  pipeline.py  types.py
basketball_sim/data/: __init__.py  loader.py
basketball_sim/data/moves/: dribble_moves.json
basketball_sim/data/narration/: announcer_default.json
basketball_sim/data/plays/: plays.json
basketball_sim/modifiers/: __init__.py  chemistry.py  coaching.py  fatigue.py  history.py  psychology.py  situational.py  tendencies.py
basketball_sim/narration/: __init__.py  aggregator.py  enricher.py  renderer.py  stats_tracker.py  templates.py
basketball_sim/resolvers/: __init__.py  composite.py  dribble.py  pass_action.py  rebound.py  shoot.py  transitions.py
plans/: basketball-simulator-architecture-plan.md
tests/: test_ai.py  test_engine.py  test_event_bus.py  test_grid.py  test_modifiers.py  test_narration.py  test_pipeline.py  test_resolvers.py  test_types.py
